@@ -19,6 +19,10 @@ master:
      arguments to not download certain pieces of data. (see #1305)
    * The mass downloader can now download stations that are part of a given
      inventory object.
+ - obspy.imaging:
+   * The functionality behind the `obspy-scan` command line script has been
+     refactored into a `Scanner` class so that it can be reused in custom
+     workflows. (see #1444)
  - obspy.imaging.cm
    * new colormap: viridis_white. This is a modification of viridis that
      goes to white instead of yellow but remains perceptually uniform. It
